name: xeno
version: 0
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  ghc-options: -Wall -O2
  exposed-modules: Xeno.SAX, Xeno.DOM, Xeno.Types
  other-modules: Control.Spork
  build-depends: base >= 4.7 && < 5, bytestring, vector, deepseq, array, mutable-containers, mtl
  default-language: Haskell2010
